# ttlsth

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.MD
basic_go_practicum/: go.mod
basic_go_practicum/cmd/: f.go
basic_go_practicum/cmd/count/: count.go
basic_go_practicum/cmd/defer/: main.go
basic_go_practicum/cmd/fizz/: fizzbuzz.go
basic_go_practicum/cmd/hello/: hello.go
basic_go_practicum/cmd/log/: main.go
basic_go_practicum/cmd/mathxxx/: main.go
basic_go_practicum/cmd/reverse/: reverse.go
basic_go_practicum/cmd/ser/: res.go
basic_go_practicum/cmd/ser1/: main.go
basic_go_practicum/cmd/temp/: main.go
basic_go_practicum/cmd/theory/: theory.go
basic_go_practicum/cmd/timer/: main.go
basic_go_practicum/pkg/: misc.go
basic_go_practicum/pkg/arrlint/: arrlint.go
basic_go_practicum/pkg/dir/: filter.go
basic_go_practicum/pkg/dups/: dups.go  dups_test.go
basic_go_practicum/pkg/f/: f.go
basic_go_practicum/pkg/fig/: fig.go
basic_go_practicum/pkg/logger/: logger.go
basic_go_practicum/pkg/mul/: mul.go  mul_test.go
basic_go_practicum/pkg/my_check/: mycheck.go
basic_go_practicum/pkg/sillymath/: sillymath.go  sillymath_test.go
basic_go_practicum/pkg/stopwatch/: stopwatch.go
basic_go_practicum/pkg/two_sum/: two_sum.go  two_sum_test.go
clect/: 1.c
cmake/: Detector.cmake  HandleToolchain.cmake  PreventInSourceBuild.cmake  PrintSummary.cmake  ProjectVersion.cmake  Utilities.cmake  add_cxx_flag.cmake  msvc_modules.cmake  pgp_add_shared.cmake  set_clang_compiler_flags.cmake  set_gcc_compiler_flags.cmake  set_msvc_compiler_flags.cmake
comprehensive-rust/: Cargo.toml
comprehensive-rust/1.day/1.fib/src/: main.rs
comprehensive-rust/1.day/2.collatz/src/: main.rs
cpp_parallel/: config.sh  meson.build
cpp_parallel/src/: main.cc
cracking-c/: meson.build
cracking-c/src/: 2.1.remove_dups.cc
gb/: Makefile  go.mod
gb/ch1/ex1/: main.go
gb/ch1/ex2/: main.go
gb/ch1/ex4/: main.go
gb/ch1/ex5/: main.go
gb/cmd/ch2/boiling/: main.go
go/: .golangci.yml  docker-compose.yaml  go.work.sum
go/auth/: go.sum
go/client/cmd/: main.go
go/client/pkg/template/: login.tmpl
go/task-tracker/cmd/: main.go
in_discovering_modem_cpp/: .clang-format  meson.build
in_discovering_modem_cpp/src/: 1.age.cc
leetcode/: Makefile  go.mod
leetcode/pkg/: list_node.go  list_node_test.go
leetcode/pkg/cracking/ch2/: palindrome.go  palindrome_test.go  sum_lists.go  sum_lists_test.go
leetcode/pkg/wix/arrays-strings/uniquer-email-addresses/: unique-email-addresses.go  unique-email-addresses_test.go
leetcode_c/: meson.build
leetcode_c/src/cracking/: 2.1.remove_dups.cc  2.2.k_th_to_last.cc
lib/: CMakeLists.txt  pacardo.h
lib/daytime/: DayTimeDemo.cbproj  Unit1.cpp  Unit1.h  main.cpp  uDayTime.cpp  uDayTime.h
lib/src/: pacardolib.cc  pacardolib.h  pacardolib.t.cc
ods/: .clang-tidy  .gitignore  CMakeLists.txt
ods-go/ch2/ex1/: main.go
ods-go/impl/: list.go
ods-rs/: Cargo.toml
ods-rs/data/: strings
ods-rs/src/implementation/: arraystack.rs
ods-rs/src/interface/: list.rs
ods/ch1/: CMakeLists.txt  ex1.1.cc
pacaro/pkg/: logger.go
programming-challenges/: CMakeLists.txt
programming-challenges/download_manager/: .golangci.toml  README.md
programming-challenges/pacardo_bot/: .gitignore  README.md
programming-challenges/pacardo_bot/cmd/: main.go
programming-challenges/rt--wav-equalizer/: CMakeLists.txt  common.ixx  common_test.cc  main.cc
projects/: CMakeLists.txt
projects/basic_go_practicum/: go.sum
projects/basic_go_practicum/cmd/: f.go
projects/basic_go_practicum/cmd/defer/: main.go
projects/basic_go_practicum/cmd/fizz/: fizzbuzz.go
projects/basic_go_practicum/cmd/log/: main.go
projects/basic_go_practicum/cmd/temp/: main.go
projects/basic_go_practicum/cmd/theory/: theory.go
projects/basic_go_practicum/pkg/: misc.go
projects/basic_go_practicum/pkg/arrlint/: arrlint.go
projects/basic_go_practicum/pkg/dir/: filter.go
projects/basic_go_practicum/pkg/dups/: dups.go  dups_test.go
projects/basic_go_practicum/pkg/f/: f.go
projects/basic_go_practicum/pkg/mul/: mul_test.go
projects/basic_go_practicum/pkg/sillymath/: sillymath.go
projects/basic_go_practicum/pkg/stopwatch/: stopwatch.go
projects/basic_go_practicum/pkg/two_sum/: two_sum_test.go
projects/cracking-c/: meson.build
projects/cracking-c/src/: 2.1.remove_dups.cc  2.2.k_th_to_last.cc
projects/gb/ch1/ex1/: main.go
projects/gb/ch1/ex2/: main.go
projects/gb/ch1/ex4/: main.go
projects/gb/ch1/ex5/: main.go
projects/in_discovering_modem_cpp/: meson.build
projects/in_discovering_modem_cpp/src/: 1.age.cc
projects/leetcode/pkg/: list_node.go
projects/leetcode/pkg/cracking/ch2/: palindrome.go  sum_lists.go
projects/ods/: CMakeLists.txt
projects/ods-go/ch2/ex1/: main.go
projects/ods-go/impl/: list.go
projects/ods-rs/: .gitignore  Cargo.toml
projects/ods-rs/data/: strings
projects/ods-rs/src/: lib.rs
projects/ods-rs/src/implementation/: arraystack.rs  arraystack_test.rs  mod.rs
projects/ods-rs/src/interface/: list.rs
projects/ods/ch1/: ex1.1_test.cc
projects/pacaro/pkg/: logger.go
projects/raster_sdl/: .gitignore  CMakeLists.txt
projects/raster_sdl/shared/sdl2/: .wikiheaders-options  CMakeLists.txt
projects/raster_sdl/shared/sdl2/build-scripts/: wikiheaders.pl
projects/raster_sdl/src/: main.cc
projects/unofficial-debibot/: CMakeLists.txt
projects/unofficial-debibot/cmd/: Main.cpp
raster_sdl/: .gitignore  CMakeLists.txt  CMakePresets.json
raster_sdl/src/: CMakeLists.txt
shared/: CMakeLists.txt
shared/googletest-cmake/: CMakeLists.txt
shared/std-module-cmake/: CMakeLists.txt
util/: CMakeConfigure.json
utils/math/: permutation.py
(+161 files in other folders)
